--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-	@@include('html/head.html',{
-	"title":"Главная"
-	})
-	<body>
-		@@include('html/header.html',{})
-		<main>
-		</main>
-		@@include('html/footer.html',{})
-		<script src="js/app.min.js"></script>
-	</body>
+@@include('html/head.html',{
+"title":"Главная"
+})
+
+<body>
+	@@include('html/header.html',{})
+
+	<section class="search" style="background-image: url(img/search-bg.jpg);">
+		<div class="container">
+			<div class="search__inner">
+				<div class="search__inner-title">
+					Welcome To Moderno Market Place!
+				</div>
+				<div class="search__inner-text">
+					Premium WordPress Themes, Web Templates and Many More ...
+				</div>
+				<div class="search__inner-form">
+					<form>
+						<input type="text" placeholder="Search Your Keywords . . ."
+							required>
+						<button type="submit">
+							<img src="img/icons/search.png" alt="">
+						</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	@@include('html/footer.html',{})
+	<script src="js/app.min.js"></script>
+</body>
+
 </html>
